исправление логики request